--- a/23-numberGuessingGames-reactnative/app.json
+++ b/23-numberGuessingGames-reactnative/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "AwesomeProject",
-    "slug": "AwesomeProject",
+    "name": "23",
+    "slug": "23",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
